--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^2.8.2",
-    "@tailwindcss/vite": "^4.1.10",
+    "@tailwindcss/vite": "^4.1.11",
     "firebase": "^11.9.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -21,7 +21,8 @@
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.10",
+    "tailwind-scrollbar": "^4.0.2",
+    "tailwindcss": "^4.1.11",
     "vite": "^6.3.5"
   },
   "devDependencies": {
